3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Implement feature request #1653770: Sockpuppeting fix (no exp when perm exp is hit).
Implement feature request #1560385: Players killing other players should get no exp.
Two new settings are added, pk_max_experience and pk_max_experience_percent. Check
 settings file to see how they work.
Also, experience gained for killing a player never exceed experience that player can lose
 considering permanent experience.
Modified files:
 common/init.c
 include/global.h
 lib/settings
 server/attack.c init.c
---
 common/porting.c: add missing variable type.
Ryo 2007-02-10

Use const char* instead of char*, use thread-safe strerror_r, fix potential memory leak.
 common/porting.c
 include/libproto.h
---
Remove static buffer from get_string_move_type().
 common/loader.l
---
 common/object.c: don't use global errmsg variable for errors, just LOG() them.
---
Remove static buffer from create_template_pathname().
 common/map.c
 include/libproto.h
 server/server.c
---
Remove static buffer from create_pathname().
 common/map.c
 include/libproto.h
 server/plugins.c server.c
 utils/mapper.c
---
Remove static buffer from create_overlay_pathname().
 common/map.c
 include/libproto.h
 server/c_wiz.c plugins.c
---
Remove static buffer from create_items_path(), and play it safe with length.
 common/map.c
---
Remove static buffer for query_base_name().
 common/button.c item.c object.c
 include/libproto.h
 server/alchemy.c apply.c c_objects.c c_range.c player.c plugins.c shop.c
 socket/info.c item.c
 types/item_transformer/item_transformer.c
---
Remove static buffer for get_ob_diff().
 common/object.c loader.l
 include/libproto.h
 server/c_wiz.c