@@ -801,14 +801,14 @@ void make_path_to_file (const char *filename)
     if (!filename || !*filename)
         return;
     strcpy (buf, filename);
-    LOG(llevDebug, "make_path_tofile %s...", filename);
+    LOG(llevDebug, "make_path_tofile %s...\n", filename);
     while ((cp = strchr (cp + 1, (int) '/'))) {
         *cp = '\0';
 #if 0
         LOG(llevDebug, "\n Checking %s...", buf);
 #endif
         if (stat(buf, &statbuf) || !S_ISDIR (statbuf.st_mode)) {
-            LOG(llevDebug, "Was not dir...");
+            LOG(llevDebug, "Was not dir...\n");
             if (mkdir (buf, SAVE_DIR_MODE)) {
                 LOG(llevError, "Cannot mkdir %s: %s\n", buf, strerror_local(errno));
                 return;
@@ -822,5 +822,4 @@ void make_path_to_file (const char *filename)
 #endif
         *cp = '/';
     }
-    LOG(llevDebug,"\n");
 }
